fix suggestion label truncation

--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -142,6 +142,9 @@ footer {
 	height: 20px;
 	padding: 4px;
 	cursor: pointer;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis
 }
 
 .suggestion.selected {
